Source/WebKit/UIProcess/WebPageProxy.cpp
@@ -2754,6 +2754,16 @@ void WebPageProxy::accessibilitySettingsDidChange()
     m_process->send(Messages::WebPage::AccessibilitySettingsDidChange(), m_pageID);
 }
 
+#if ENABLE(ACCESSIBILITY_EVENTS)
+void WebPageProxy::updateAccessibilityEventsEnabled(bool enabled)
+{
+    if (!isValid())
+        return;
+
+    m_process->send(Messages::WebPage::UpdateAccessibilityEventsEnabled(enabled), m_pageID);
+}
+#endif
+
 void WebPageProxy::setUseFixedLayout(bool fixed)
 {
     if (!isValid())
